welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: value % is not a member of java.awt.Color
      peindre(T(i)%getMondeHauteur())
                  ^